--- a/AndroidSkeletonMVP/build.gradle
+++ b/AndroidSkeletonMVP/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.rxkotlin_version = '2.4.0'
     ext.room_version = '2.2.0-rc01'
     ext.espresso_version = '3.2.0'
+    ext.jacoco_version = '0.8.2'
     repositories {
         google()
         jcenter()
