--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,8 @@ jobs:
           name: Run Tests
           command: cd AndroidSkeletonMVP;./gradlew lint test
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: app/build/reports
+          path: AndroidSkeletonMVP/app/build/reports
           destination: reports
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: app/build/test-results
+          path: AndroidSkeletonMVP/app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
