Changed travis and build compile options

--- a/AndroidSkeletonMVP/app/build.gradle
+++ b/AndroidSkeletonMVP/app/build.gradle
@@ -45,7 +45,12 @@ android {
         }
         unitTests.returnDefaultValues = true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
