--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
-orbs:
-  codecov: codecov/codecov@1.0.5
+#orbs:
+#  codecov: codecov/codecov@1.0.5
 jobs:
   build:
     working_directory: ~/code
@@ -30,6 +30,6 @@ jobs:
           destination: reports
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: AndroidSkeletonMVP/app/build/test-results
-      - codecov/upload:
-          file: AndroidSkeletonMVP/app/build/test-results
+#      - codecov/upload:
+#          file: AndroidSkeletonMVP/app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
